<resources>
    <string name="app_name">Android.3.Lesson.3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">title:</string>
    <string name="user">user:</string>
    <string name="group">group:</string>
    <string name="content">content:</string>
    <string name="save">save</string>
    <string name="create">create</string>
</resources>