<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="TextViewEdits">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/title"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_title_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textSize="16sp"
            tools:text="@string/title" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_content_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/content"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_content_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:textSize="16sp"
            tools:text="@string/content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_group_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/group"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_group_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:textSize="16sp"
            tools:text="@string/group" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_user_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="text"
            android:text="@string/user"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_user_fragment_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:inputType="number"
            android:textSize="16sp"
            tools:text="@string/user" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_create_fragment_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create" />


</LinearLayout>